# tom-pollak.github.io

./: .gitignore  404.html  _environment  _quarto.yml  black.scss  compile.sh  compile_md.sh  index.html  markdown_template.html  pyproject.toml  quant.py  styles.scss
.github/workflows/: static.yml
md/: blender_copilot.md  column_vs_row_major.md  crosscoder.md  each_way_matcher.md  gpu-jargon.md  mcp_resource_vs_tool.md  mutransfer_sae.md  mutransfer_saes.md  parallel_scaling.md  soft_sampling.md  trigram_worklog.md  writings.md
nbs/: beating_traitors.ipynb  left_vs_right_padding.ipynb  nf4.ipynb  sampling_from_scratch.ipynb  shaders_wgsl.ipynb  soft_sampling_play.ipynb  structured_output_with_claudette_pydantic.ipynb  tensor_parallel.ipynb  triton_kernels.ipynb
styles/: main.css
