[project]
name = "tom-pollak-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.6",
    "jaxtyping>=0.3.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]
